add clients section

--- a/public/index.html
+++ b/public/index.html
@@ -272,6 +272,46 @@
             </div>
         </div>
     </section>
+    
+    <section id="clients" class="feature-list section">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="heading">
+                        <h2>Clients</h2>
+                        <p>Use Echo Photos wherever you want!</p>
+                    </div>
+                </div>
+    
+            </div>
+            <div class="row mb-40">
+                <div class="col-md-6 text-center mb-5 mb-lg-0">
+                    <img class="img-fluid" src="images/requestmap.png" alt="">
+                </div>
+                <div class="col-md-6 align-self-center text-center text-md-left">
+                    <div class="content">
+                        <h4 class="subheading">Echo Photos in your Browser</h4>
+                        <p>Upload and download the photos directly from your computer through the Echo Photos browser plugin.</p>
+                            <a href="https://web.echophotos.io" target="_blank" class="btn btn-main btn-main-sm">Open Web App</a>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6 order-md-1 order-2 align-self-center text-center text-md-left">
+                    <div class="content">
+                        <h4 class="subheading">macOS App</h4>
+                        <p>Use Echo Photos on the macOS Desktop App on any Mac that uses the same iCloud account as your iOS device. Currently, log-in is only possible this way.</p>
+                        <a href="https://apps.apple.com/us/app/id1499073049">
+                            <img src="images/MacAppStore.svg" height="40" alt="Get Echo from the App Store">
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-6 order-md-2 order-1 text-center mb-5 mb-lg-0">
+                    <img class="img-fluid" src="images/request.png" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
 
     <footer>
         <div class="container text-center">
@@ -285,6 +325,9 @@
                             </li>
                             <li class="list-inline-item">
                                 <a href="#albums">Albums</a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a href="https://web.echophotos.io" target="_blank">Web App</a>
                             </li>
                             <li class="list-inline-item">
                                 <a href="http://instagram.com/echophotos.io" target="_blank" rel="noreferrer noopener">Instagram</a>
