--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,9 @@
                             <a class="nav-link" href="#requests">Requests</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="#clients">Clients</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="#download">Download</a>
                         </li>
                     </ul>
@@ -59,7 +62,7 @@
                 </div>
                 <div class="col-md-6 align-self-center text-center text-md-left">
                     <div class="block">
-                        <h1 class="font-weight-bold mb-4 font-size-55">Simple. Forever. Supreme Photo Sharing</h1>
+                        <h1 class="font-weight-bold mb-4 font-size-55">High-Res. Simple. Supreme Photo Albums</h1>
                         <p class="mb-4">The prime solution for sharing photos: Create albums, add friends, upload high-resolution images and 
                              write comments - make everlasting memories!</p>
                         <a href="https://apps.apple.com/us/app/id1499073049">
@@ -83,7 +86,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="heading">
-                        <h2>Our Core Features</h2>
+                        <h2>Unlimited Memories</h2>
                     </div>
                 </div>
                 <div class="col-md-4">
@@ -92,7 +95,7 @@
                             <ion-icon name="star"></ion-icon>
                         </h3>
                         <h4 class="font-weight-bold mb-2">High Resolution</h4>
-                        <p>It has never been easier to share high quality pictures with your friends.</p>
+                        <p>Share your photos in full resolution in its original quality.</p>
                     </div>
                     <div class="mb-40 text-center text-md-left">
                         <h3 class="font-weight-bold mb-2">
@@ -106,8 +109,8 @@
                         <h3 class="font-weight-bold mb-2">
                             <ion-icon name="pricetag"></ion-icon>
                         </h3>
-                        <h4 class="font-weight-bold mb-2">Easy Pricing</h4>
-                        <p>No subscriptions, no storage limits: Premium features are paid once and kept forever.</p>
+                        <h4 class="font-weight-bold mb-2">Free for the First Year</h4>
+                        <p>No subscriptions, no storage limits: Premium features are paid once and kept forever. During the first year of usage, all albums are promium for free!</p>
                     </div>
                 </div>
                 <div class="col-md-4 text-center align-self-center mb-4 mb-md-0">
@@ -175,8 +178,8 @@
     
                         <h3 style="color:green;">Care for the Climate</h3>
                         <h2 style="color:green;" class="subheading font-weight-bold mb-10"><ion-icon name="leaf"></ion-icon> Carbon Neutral</h2>
-                        <p>Our servers run entirely Carbon-Neutral.</p>
-                        <p>Plus, we are committed to be entriely carbon-free by 2030.</p>
+                        <p>Our servers run entirely carbon-neutral.</p>
+                        <p>Plus, we are committed to be completely carbon-free by 2030.</p>
                     </div>
                 </div>
                 <div class="col-md-6 text-center mb-5 mb-lg-0">
@@ -279,14 +282,14 @@
                 <div class="col-md-12">
                     <div class="heading">
                         <h2>Clients</h2>
-                        <p>Use Echo Photos wherever you want!</p>
+                        <p>Use Echo Photos wherever you want! Besides the main iOS and Android apps you can also view your albums on macOS and in the browser!</p>
                     </div>
                 </div>
     
             </div>
             <div class="row mb-40">
                 <div class="col-md-6 text-center mb-5 mb-lg-0">
-                    <img class="img-fluid" src="images/requestmap.png" alt="">
+                    <img class="img-fluid" src="images/browser.jpg" alt="">
                 </div>
                 <div class="col-md-6 align-self-center text-center text-md-left">
                     <div class="content">
@@ -307,7 +310,7 @@
                     </div>
                 </div>
                 <div class="col-md-6 order-md-2 order-1 text-center mb-5 mb-lg-0">
-                    <img class="img-fluid" src="images/request.png" alt="">
+                    <img class="img-fluid" src="images/macOS.jpg" alt="">
                 </div>
             </div>
         </div>
