--- a/public/index.html
+++ b/public/index.html
@@ -110,7 +110,7 @@
                             <ion-icon name="pricetag"></ion-icon>
                         </h3>
                         <h4 class="font-weight-bold mb-2">Free for the First Year</h4>
-                        <p>No subscriptions, no storage limits: Premium features are paid once and kept forever. During the first year of usage, all albums are promium for free!</p>
+                        <p>No subscriptions, no storage limits: Premium features are paid once and kept forever. During the first year of usage, all albums are premium for free!</p>
                     </div>
                 </div>
                 <div class="col-md-4 text-center align-self-center mb-4 mb-md-0">
