SF Icons, high res logo

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     <header id="download">
         <div class="container">
             <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-white">
-                <a class="navbar-brand" href="#"><img src="images/logo125.png"  alt=""></a>
+                <a class="navbar-brand" href="#"><img src="images/logo125.png" height="50"  alt=""></a>
 
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
                     data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -62,8 +62,8 @@
                 </div>
                 <div class="col-md-6 align-self-center text-center text-md-left">
                     <div class="block">
-                        <h1 class="font-weight-bold mb-4 font-size-55">High-Res. Simple. Supreme Photo Albums</h1>
-                        <p class="mb-4">The prime solution for sharing photos: Create albums, add friends, upload high-resolution images and 
+                        <h1 class="font-weight-bold mb-4 font-size-55">Full-Res. Simple. Supreme Photo Albums</h1>
+                        <p class="mb-4">The prime solution for sharing photos: Create albums, add friends, upload full-resolution images and 
                              write comments - make everlasting memories!</p>
                         <a href="https://apps.apple.com/us/app/id1499073049">
                             <img src="images/AppStore.svg" height="40" alt="Get Echo from the App Store">
@@ -92,14 +92,14 @@
                 <div class="col-md-4">
                     <div class="mb-40 text-center text-md-left">
                         <h3 class="font-weight-bold mb-2">
-                            <ion-icon name="star"></ion-icon>
+                            <img src="images/icons/photo.on.rectangle.svg" height="40">
                         </h3>
-                        <h4 class="font-weight-bold mb-2">High Resolution</h4>
+                        <h4 class="font-weight-bold mb-2">Full Resolution</h4>
                         <p>Share your photos in full resolution in its original quality.</p>
                     </div>
                     <div class="mb-40 text-center text-md-left">
                         <h3 class="font-weight-bold mb-2">
-                            <ion-icon name="lock-closed"></ion-icon>
+                            <img src="images/icons/lock.fill.svg" height="40">
                         </h3>
                         <h4 class="font-weight-bold mb-2">Premium Privacy</h4>
                         <p>No ads, no tracking and secure storage: The advantages of an independent company benefit
@@ -107,7 +107,7 @@
                     </div>
                     <div class="mb-40 text-center text-md-left">
                         <h3 class="font-weight-bold mb-2">
-                            <ion-icon name="pricetag"></ion-icon>
+                            <img src="images/icons/star.fill.svg" height="40">
                         </h3>
                         <h4 class="font-weight-bold mb-2">Free for the First Year</h4>
                         <p>No subscriptions, no storage limits: Premium features are paid once and kept forever. During the first year of usage, all albums are premium for free!</p>
@@ -119,22 +119,22 @@
                 <div class="col-md-4">
                     <div class="mb-40 text-center text-md-left">
                         <h3 class="font-weight-bold mb-2">
-                            <ion-icon name="radio"></ion-icon>
+                            <img src="images/icons/dot.radiowaves.left.and.right.svg" height="40">
                         </h3>
                         <h4 class="font-weight-bold mb-2">Photo Requests</h4>
                         <p>Get amazing pictures of you taken from unknown others. From their position, they can take the picture of you that you would never have dreamed of!</p>
                     </div>
                     <div class="mb-40 text-center text-md-left">
                         <h3 class="font-weight-bold mb-2">
-                            <ion-icon name="eye"></ion-icon>
+                            <img src="images/icons/checkmark.seal.fill.svg" height="40">
                         </h3>
-                        <h4 class="font-weight-bold mb-2">Sharp Design</h4>
+                        <h4 class="font-weight-bold mb-2">Refined Design</h4>
                         <p>A carefully crafted app: Simple and yet feature-rich, letting you focus on what 
                           you want to do.</p>
                     </div>
                     <div class="mb-40 text-center text-md-left">
                         <h3 class="font-weight-bold mb-2">
-                            <ion-icon name="people"></ion-icon>
+                            <img src="images/icons/person.2.fill.svg" height="40">
                         </h3>
                         <h4 class="font-weight-bold mb-2">Social Sharing</h4>
                         <p>Comments and likes for your group images: Echo provides a private social network experience.
@@ -155,7 +155,7 @@
                     <div class="content">
                       
                         <h3 class="text-white">Say no to Tracking!</h3>
-                        <h2 class="subheading text-white font-weight-bold mb-10">Premium Privacy <ion-icon name="lock-closed"></ion-icon></h2>
+                        <h2 class="subheading text-white font-weight-bold mb-10">Premium Privacy <img src="images/icons/lock.fill.white.svg" height="60"></h2>
                         <p class="text-white">Echo Photos does not monetize your private data.
                             We do not track user data for ads or to sell them. For us, you are our customer -
                             you deserve our best service!</p>
@@ -177,7 +177,7 @@
                     <div class="content">
     
                         <h3 style="color:green;">Care for the Climate</h3>
-                        <h2 style="color:green;" class="subheading font-weight-bold mb-10"><ion-icon name="leaf"></ion-icon> Carbon Neutral</h2>
+                        <h2 style="color:green;" class="subheading font-weight-bold mb-10"><img src="images/icons/leaf.fill.svg" height="60">Carbon Neutral</h2>
                         <p>Our servers run entirely carbon-neutral.</p>
                         <p>Plus, we are committed to be completely carbon-free by 2030.</p>
                     </div>
@@ -353,7 +353,6 @@
 
 
     <!-- Js -->
-    <script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
     <script src="plugins/jquery-2.1.1.min.js"></script>
     <script src="plugins/bootstrap/bootstrap.min.js"></script>
     <script src="js/main.js"></script>
