rephrase macOS client

--- a/public/index.html
+++ b/public/index.html
@@ -302,8 +302,8 @@
             <div class="row">
                 <div class="col-md-6 order-md-1 order-2 align-self-center text-center text-md-left">
                     <div class="content">
-                        <h4 class="subheading">macOS App</h4>
-                        <p>Use Echo Photos on the macOS Desktop App on any Mac that uses the same iCloud account as your iOS device. Currently, log-in is only possible this way.</p>
+                        <h4 class="subheading">Client for macOS</h4>
+                        <p>Use Echo Photos through the macOS App on any Mac that uses the same iCloud account as your iOS device. Currently, log-in is only possible this way.</p>
                         <a href="https://apps.apple.com/us/app/id1499073049">
                             <img src="images/MacAppStore.svg" height="40" alt="Get Echo from the App Store">
                         </a>
