--- a/public/join-group/index.html
+++ b/public/join-group/index.html
@@ -65,8 +65,9 @@
                         <a href="https://apps.apple.com/us/app/id1499073049">
                             <img src="../images/AppStore.svg" height="40" alt="Get Echo from the App Store">
                         </a>
-                        <a href="https://play.google.com/store/apps/details?id=ch.echolabs.echo">
-                            <img src="../images/GooglePlay.svg" height="40" alt="Get Echo from Google Play">
+                        <a href='https://play.google.com/store/apps/details?id=ch.echolabs.echo'>
+                            <img height=60 alt='Get it on Google Play'
+                                src='https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png' />
                         </a>
                    </div>
                 </div>
