--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,9 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ml-auto text-center text-lg-left">
                         <li class="nav-item">
+                            <a class="nav-link" href="/press">Press</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="#features">Features</a>
                         </li>
                         <li class="nav-item">
