--- a/public/privacy/index.html
+++ b/public/privacy/index.html
@@ -31,7 +31,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto text-center text-lg-left">
             <li class="nav-item">
-              <a class="nav-link" href="../#features">Features</a>
+               <a class="nav-link" href="../press">Press</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="../#albums">Albums</a>
