--- a/public/404.html
+++ b/public/404.html
@@ -21,7 +21,7 @@
     <header id="download">
         <div class="container">
             <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-white">
-                <a class="navbar-brand" href="#"><img src="images/logo125.png" alt=""></a>
+                <a class="navbar-brand" href="/"><img src="images/logo125.png" height="50" alt=""></a>
 
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
                     data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
