Update press site

--- a/public/press/index.html
+++ b/public/press/index.html
@@ -56,23 +56,16 @@
             <h1 class="font-weight-bold mb-4 font-size-55">Press</h1>
 
             <p>
-                Echo Labs AG built the Echo Photos app as
-                a Freemium app. This SERVICE is provided by
-                Echo Labs AG at no cost and is intended for use as
-                is.
+                We have a collection of images in a press kit as well as a flyer containing the most improtat data of Echo Photos.
             </p>
             <p>
-                This page is used to inform visitors regarding our
-                policies with the collection, use, and disclosure of Personal
-                Information if anyone decided to use our Service.
+                <a href="https://drive.google.com/file/d/1PBWO5sMAmvOZXWJRvTqc7jXGNEVen-vp/view?usp=sharing">
+                    Download Press Kit
+                </a>
+                <a href="https://drive.google.com/file/d/1QHwwimtBLHvvvqouhTmqMmy6Kn_ejor8/view?usp=sharing">
+                    Download Flyer
+                </a>
             </p>
-
-            <a href="https://drive.google.com/file/d/1PBWO5sMAmvOZXWJRvTqc7jXGNEVen-vp/view?usp=sharing">
-                Press Kit
-            </a>
-            <a href="https://drive.google.com/file/d/1QHwwimtBLHvvvqouhTmqMmy6Kn_ejor8/view?usp=sharing">
-                Flyer
-            </a>
 
 
 
