--- a/public/404.html
+++ b/public/404.html
@@ -67,7 +67,6 @@
         </div><!-- .container close -->
     </section><!-- header close -->
 
-
     <footer>
         <div class="container text-center">
             <div class="row">
@@ -82,13 +81,20 @@
                                 <a href="#albums">Albums</a>
                             </li>
                             <li class="list-inline-item">
-                                <a href="http://instagram.com/echophotos.io" target="_blank" rel="noreferrer noopener">Instagram</a>
+                                <a href="https://web.echophotos.io" target="_blank">Web App</a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a href="http://instagram.com/echophotos.io" target="_blank"
+                                    rel="noreferrer noopener">Instagram</a>
                             </li>
                             <li class="list-inline-item">
                                 <a href="#download">Download</a>
                             </li>
                             <li class="list-inline-item">
                                 <a href="/privacy">Privacy</a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a href="/press">Press</a>
                             </li>
                         </ul>
                         <p class="copyright-text">Copyright &copy; <a href="http://www.echolabs.ch"> Echo Labs AG</a> |
