--- a/public/index.html
+++ b/public/index.html
@@ -32,9 +32,6 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ml-auto text-center text-lg-left">
                         <li class="nav-item">
-                            <a class="nav-link" href="/press">Press</a>
-                        </li>
-                        <li class="nav-item">
                             <a class="nav-link" href="#features">Features</a>
                         </li>
                         <li class="nav-item">
@@ -317,9 +314,7 @@
                 </div>
             </div>
         </div>
-    </section>
-
-    <footer>
+    </section><footer>
         <div class="container text-center">
             <div class="row">
                 <div class="col-md-12">
@@ -336,13 +331,17 @@
                                 <a href="https://web.echophotos.io" target="_blank">Web App</a>
                             </li>
                             <li class="list-inline-item">
-                                <a href="http://instagram.com/echophotos.io" target="_blank" rel="noreferrer noopener">Instagram</a>
+                                <a href="http://instagram.com/echophotos.io" target="_blank"
+                                    rel="noreferrer noopener">Instagram</a>
                             </li>
                             <li class="list-inline-item">
                                 <a href="#download">Download</a>
                             </li>
                             <li class="list-inline-item">
                                 <a href="/privacy">Privacy</a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a href="/press">Press</a>
                             </li>
                         </ul>
                         <p class="copyright-text">Copyright &copy; <a href="http://www.echolabs.ch"> Echo Labs AG</a> |
