--- a/public/press/index.html
+++ b/public/press/index.html
@@ -56,42 +56,50 @@
             <h1 class="font-weight-bold mb-4 font-size-55">Press</h1>
 
             <p>
-                We have a collection of images in a press kit as well as a flyer containing the most improtat data of Echo Photos.
+                We have a collection of images in a press kit as well as a flyer containing the most improtat data of
+                Echo Photos.
             </p>
             <p>
                 <a href="https://drive.google.com/file/d/1PBWO5sMAmvOZXWJRvTqc7jXGNEVen-vp/view?usp=sharing">
-                    Download Press Kit
-                </a>
-                <a href="https://drive.google.com/file/d/1QHwwimtBLHvvvqouhTmqMmy6Kn_ejor8/view?usp=sharing">
-                    Download Flyer
+                    <img src="../images/icons/arrow.down.circle.fill.svg" height="60"> Download Press Kit
                 </a>
             </p>
-
-
-
-        </div><!-- .container close -->
-    </section><!-- header close -->
-
+            <p>
+                <a href="https://drive.google.com/file/d/1QHwwimtBLHvvvqouhTmqMmy6Kn_ejor8/view?usp=sharing">
+                    <img src="../images/icons/arrow.down.circle.fill.svg" height="60"> Download Flyer
+                </a>
+            </p>
+        </div>
+    </section>
 
     <footer>
         <div class="container text-center">
             <div class="row">
                 <div class="col-md-12">
                     <div class="block">
-                        <a href="../#" class="footer-logo mb-4">Echo Photos</a>
+                        <a href="#" class="footer-logo mb-4">Echo Photos</a>
                         <ul class="list-inline footer-menu">
                             <li class="list-inline-item">
-                                <a href="../#">Home</a>
+                                <a href="#">Home</a>
                             </li>
                             <li class="list-inline-item">
-                                <a href="../#albums">Albums</a>
+                                <a href="#albums">Albums</a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a href="https://web.echophotos.io" target="_blank">Web App</a>
                             </li>
                             <li class="list-inline-item">
                                 <a href="http://instagram.com/echophotos.io" target="_blank"
                                     rel="noreferrer noopener">Instagram</a>
                             </li>
                             <li class="list-inline-item">
-                                <a href="../#download">Download</a>
+                                <a href="#download">Download</a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a href="/privacy">Privacy</a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a href="/press">Press</a>
                             </li>
                         </ul>
                         <p class="copyright-text">Copyright &copy; <a href="http://www.echolabs.ch"> Echo Labs AG</a> |
@@ -102,7 +110,6 @@
             </div>
         </div>
     </footer>
-
 
     <!-- Js -->
     <script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
