--- a/public/privacy/index.html
+++ b/public/privacy/index.html
@@ -31,7 +31,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto text-center text-lg-left">
             <li class="nav-item">
-               <a class="nav-link" href="../press">Press</a>
+               <a class="nav-link" href="../features">Features</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="../#albums">Albums</a>
@@ -179,6 +179,9 @@
               </li>
               <li class="list-inline-item">
                 <a href="../#download">Download</a>
+              </li>
+              <li class="list-inline-item">
+                <a href="/press">Press</a>
               </li>
             </ul>
             <p class="copyright-text">Copyright &copy; <a href="http://www.echolabs.ch"> Echo Labs AG</a> |
