--- a/public/tac/index.html
+++ b/public/tac/index.html
@@ -169,25 +169,33 @@
     </div><!-- .container close -->
   </section><!-- header close -->
 
-
   <footer>
     <div class="container text-center">
       <div class="row">
         <div class="col-md-12">
           <div class="block">
-            <a href="../#" class="footer-logo mb-4">Echo Photos</a>
+            <a href="#" class="footer-logo mb-4">Echo Photos</a>
             <ul class="list-inline footer-menu">
               <li class="list-inline-item">
-                <a href="../#">Home</a>
+                <a href="#">Home</a>
               </li>
               <li class="list-inline-item">
-                <a href="../#albums">Albums</a>
+                <a href="#albums">Albums</a>
+              </li>
+              <li class="list-inline-item">
+                <a href="https://web.echophotos.io" target="_blank">Web App</a>
               </li>
               <li class="list-inline-item">
                 <a href="http://instagram.com/echophotos.io" target="_blank" rel="noreferrer noopener">Instagram</a>
               </li>
               <li class="list-inline-item">
-                <a href="../#download">Download</a>
+                <a href="#download">Download</a>
+              </li>
+              <li class="list-inline-item">
+                <a href="/privacy">Privacy</a>
+              </li>
+              <li class="list-inline-item">
+                <a href="/press">Press</a>
               </li>
             </ul>
             <p class="copyright-text">Copyright &copy; <a href="http://www.echolabs.ch"> Echo Labs AG</a> |
