Do not autoforward

--- a/public/join-group/index.html
+++ b/public/join-group/index.html
@@ -121,7 +121,7 @@
     <script src="../plugins/bootstrap/bootstrap.min.js"></script>
     <script src="../js/main.js"></script>
 
-    <script>
+    <!-- <script>
         $(document).ready(function () {
             if (navigator.userAgent.toLowerCase().indexOf("android") > -1) {
                 window.location.href = 'https://play.google.com/store/apps/details?id=ch.echolabs.echo';
@@ -133,7 +133,7 @@
                 window.location.href = 'https://apps.apple.com/us/app/id1499073049';
             }
         });
-    </script>
+    </script> -->
 
 </body>
 
