--- a/public/index.html
+++ b/public/index.html
@@ -314,7 +314,8 @@
                 </div>
             </div>
         </div>
-    </section><footer>
+    </section>
+    <footer>
         <div class="container text-center">
             <div class="row">
                 <div class="col-md-12">
