--- a/public/join-group/index.html
+++ b/public/join-group/index.html
@@ -54,16 +54,30 @@
     <!-- hero area -->
     <section class="section">
         <div class="container">
-            <div class="row">
-                <div class="col-md-6 text-center mb-5 mb-md-0">
-                    <img src="/images/AppIcon300.png">
-                </div>
+            <div id="inviteInfo" class="row">
+                <div class="col-md-6 text-center mb-5 mb-md-0" id="qrcode"></div>
                 <div class="col-md-6 align-self-center text-center text-md-left">
                     <div class="block">
-                        <h1 class="font-weight-bold mb-4 font-size-55">Open on Echo Photos</h1>
-                        <p class="mb-4">The invite link you are trying to open can be opened with the Echo Photos App.</p>
-                        <p class="mb-4" id="inviteCode"></p>
-                        <button onclick="copyToClipboard()">Copy</button>
+                        <h4 class="font-weight-bold mb-4 font-size-55" id="title">Album Invite Code</h1>
+                        <p style="text-align: center; padding-top: 20px; padding-right: 20px; padding-bottom: 20px; padding-left: 20px; background-color: lightgray; border-radius: 25px; text-transform: Uppercase; font-weight: light; font-size: 50px; font-family: 'Courier New', ui-monospace"
+                            id="inviteCode"></p>
+                        <p class="mb-4">Join the album by <b>entering the code</b> in the Echo Photos app. You can also <b>scan
+                            the QR code with your phone</b> if you have the app installed.</p>
+                        <button class="btn btn-main btn-main-sm" onclick="copyToClipboard()">Copy Code</button>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div>
+                    <svg width="100" height="100">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6 align-self-center text-center text-md-left">
+                    <div class="block">
+                        <h1 class="font-weight-bold mb-4 font-size-55" id="title">Get Echo Photos</h1>
+                        <p class="mb-4">The invite link you are trying to open can be opened with the Echo Photos App.
+                        </p>
 
                         <a href="https://apps.apple.com/us/app/id1499073049">
                             <img src="/images/AppStore.svg" height="40" alt="Get Echo from the App Store">
@@ -72,7 +86,10 @@
                             <img height=60 alt='Get it on Google Play'
                                 src='https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png' />
                         </a>
-                   </div>
+                    </div>
+                </div>
+                <div class="col-md-6 text-center mb-5 mb-md-0">
+                    <img src="/images/AppIcon300.png">
                 </div>
             </div>
         </div>
@@ -117,10 +134,10 @@
         </div>
     </footer>
 
-
     <!-- Js -->
     <script src="/plugins/jquery-2.1.1.min.js"></script>
     <script src="/plugins/bootstrap/bootstrap.min.js"></script>
+    <script src="/plugins/qrcode.min.js"></script>
     <script src="/js/main.js"></script>
 
     <!-- <script>
@@ -136,34 +153,6 @@
             }
         });
     </script> -->
-    <script>
-        var path = window.location.pathname;
-        if (!path.startsWith("/invite/")) {
-            return;
-        }
-        var inviteId = path.substring(8, 44);
-        var inviteCode = path.substring(8, 16);
-
-        document.getElementById("inviteCode").innerHTML =
-            "Copy code <br>" + inviteCode;
-
-    </script>
-    <script>
-        function copyToClipboard() {
-                var path = window.location.pathname;
-                if (!path.startsWith("/invite/")) {
-                    return;
-                }
-                var inviteId = path.substring(8, 44);
-                var inviteCode = path.substring(8, 16);
-                // Copy the text inside the text field
-                navigator.clipboard.writeText(inviteCode);
-
-                // Alert the copied text
-                alert("Copied invite code to your clipboard: " + inviteCode);
-            }
-    </script>
-
 </body>
 
 </html>
