Use absolute instead of relative paths

--- a/public/press/index.html
+++ b/public/press/index.html
@@ -11,8 +11,8 @@
 
     <!-- CSS -->
     <!-- Bootstrap CDN -->
-    <link rel="stylesheet" href="../plugins/bootstrap/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="/plugins/bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/style.css">
     <!-- Responsive Stylesheet -->
 </head>
 
@@ -21,10 +21,10 @@
     <header id="download">
         <div class="container">
             <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-white">
-                <a class="navbar-brand" href="../"><img src="../images/logo125.png" height="50" alt=""></a>
+                <a class="navbar-brand" href="/"><img src="/images/logo125.png" height="50" alt=""></a>
 
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
-                    data-target="../#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    data-target="/#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -32,16 +32,16 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ml-auto text-center text-lg-left">
                         <li class="nav-item">
-                            <a class="nav-link" href="../press">Press</a>
+                            <a class="nav-link" href="/press">Press</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../#albums">Albums</a>
+                            <a class="nav-link" href="/#albums">Albums</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../#requests">Requests</a>
+                            <a class="nav-link" href="/#requests">Requests</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../#download">Download</a>
+                            <a class="nav-link" href="/#download">Download</a>
                         </li>
                     </ul>
                 </div>
@@ -61,12 +61,12 @@
             </p>
             <p>
                 <a href="https://drive.google.com/file/d/1PBWO5sMAmvOZXWJRvTqc7jXGNEVen-vp/view?usp=sharing">
-                    <img src="../images/icons/arrow.down.circle.fill.svg" height="60"> Download Press Kit
+                    <img src="/images/icons/arrow.down.circle.fill.svg" height="60"> Download Press Kit
                 </a>
             </p>
             <p>
                 <a href="https://drive.google.com/file/d/1QHwwimtBLHvvvqouhTmqMmy6Kn_ejor8/view?usp=sharing">
-                    <img src="../images/icons/arrow.down.circle.fill.svg" height="60"> Download Flyer
+                    <img src="/images/icons/arrow.down.circle.fill.svg" height="60"> Download Flyer
                 </a>
             </p>
         </div>
