--- a/public/privacy/index.html
+++ b/public/privacy/index.html
@@ -11,8 +11,8 @@
 
   <!-- CSS -->
   <!-- Bootstrap CDN -->
-  <link rel="stylesheet" href="../plugins/bootstrap/bootstrap.min.css">
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="/plugins/bootstrap/bootstrap.min.css">
+  <link rel="stylesheet" href="/css/style.css">
   <!-- Responsive Stylesheet -->
 </head>
 
@@ -21,9 +21,9 @@
   <header id="download">
     <div class="container">
       <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-white">
-                <a class="navbar-brand" href="../"><img src="../images/logo125.png" height="50" alt=""></a>
+                <a class="navbar-brand" href="/"><img src="/images/logo125.png" height="50" alt=""></a>
 
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="../#navbarSupportedContent"
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="/#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -31,16 +31,16 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto text-center text-lg-left">
             <li class="nav-item">
-               <a class="nav-link" href="../features">Features</a>
+               <a class="nav-link" href="/features">Features</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../#albums">Albums</a>
+              <a class="nav-link" href="/#albums">Albums</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../#requests">Requests</a>
+              <a class="nav-link" href="/#requests">Requests</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../#download">Download</a>
+              <a class="nav-link" href="/#download">Download</a>
             </li>
           </ul>
         </div>
@@ -166,19 +166,19 @@
       <div class="row">
         <div class="col-md-12">
           <div class="block">
-            <a href="../#" class="footer-logo mb-4">Echo Photos</a>
+            <a href="/#" class="footer-logo mb-4">Echo Photos</a>
             <ul class="list-inline footer-menu">
               <li class="list-inline-item">
-                <a href="../#">Home</a>
+                <a href="/#">Home</a>
               </li>
               <li class="list-inline-item">
-                <a href="../#albums">Albums</a>
+                <a href="/#albums">Albums</a>
               </li>
               <li class="list-inline-item">
                 <a href="http://instagram.com/echophotos.io" target="_blank" rel="noreferrer noopener">Instagram</a>
               </li>
               <li class="list-inline-item">
-                <a href="../#download">Download</a>
+                <a href="/#download">Download</a>
               </li>
               <li class="list-inline-item">
                 <a href="/press">Press</a>
