--- a/public/join-group/index.html
+++ b/public/join-group/index.html
@@ -11,8 +11,8 @@
 
     <!-- CSS -->
     <!-- Bootstrap CDN -->
-    <link rel="stylesheet" href="../plugins/bootstrap/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="/plugins/bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/style.css">
     <!-- Responsive Stylesheet -->
 </head>
 
@@ -22,7 +22,7 @@
     <header id="download">
         <div class="container">
             <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-white">
-                <a class="navbar-brand" href="../"><img src="../images/logo125.png" height="50" alt=""></a>
+                <a class="navbar-brand" href="/"><img src="/images/logo125.png" height="50" alt=""></a>
 
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
                     data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -33,16 +33,16 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ml-auto text-center text-lg-left">
                         <li class="nav-item">
-                            <a class="nav-link" href="../#features">Features</a>
+                            <a class="nav-link" href="/#features">Features</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../#albums">Albums</a>
+                            <a class="nav-link" href="/#albums">Albums</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../#requests">Requests</a>
+                            <a class="nav-link" href="/#requests">Requests</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../#download">Download</a>
+                            <a class="nav-link" href="/#download">Download</a>
                         </li>
                     </ul>
                 </div>
@@ -56,14 +56,14 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 text-center mb-5 mb-md-0">
-                    <img src="../images/AppIcon300.png">
+                    <img src="/images/AppIcon300.png">
                 </div>
                 <div class="col-md-6 align-self-center text-center text-md-left">
                     <div class="block">
                         <h1 class="font-weight-bold mb-4 font-size-55">Open on Echo Photos</h1>
                         <p class="mb-4">The invite link you are trying to open can be opened with the Echo Photos App</p>
                         <a href="https://apps.apple.com/us/app/id1499073049">
-                            <img src="../images/AppStore.svg" height="40" alt="Get Echo from the App Store">
+                            <img src="/images/AppStore.svg" height="40" alt="Get Echo from the App Store">
                         </a>
                         <a href='https://play.google.com/store/apps/details?id=ch.echolabs.echo'>
                             <img height=60 alt='Get it on Google Play'
@@ -117,9 +117,9 @@
 
     <!-- Js -->
     <script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
-    <script src="../plugins/jquery-2.1.1.min.js"></script>
-    <script src="../plugins/bootstrap/bootstrap.min.js"></script>
-    <script src="../js/main.js"></script>
+    <script src="/plugins/jquery-2.1.1.min.js"></script>
+    <script src="/plugins/bootstrap/bootstrap.min.js"></script>
+    <script src="/js/main.js"></script>
 
     <!-- <script>
         $(document).ready(function () {
