--- a/public/join-group/index.html
+++ b/public/join-group/index.html
@@ -13,7 +13,16 @@
     <!-- Bootstrap CDN -->
     <link rel="stylesheet" href="/plugins/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="/css/style.css">
-    <!-- Responsive Stylesheet -->
+
+
+    <meta property="og:title" content="Album Invite" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Echo Photos">
+    <!-- <meta property="og:url" content="https://www.echophotos.io/" /> -->
+    <meta property="og:image" content="https://www.echophotos.io/images/AppIcon300.png" />
+    
+    <meta property="og:description" content="This link allows you to join an Echo Photos album.">
+    
 </head>
 
 <body id="body">
