--- a/public/index.html
+++ b/public/index.html
@@ -121,8 +121,8 @@
                         <h3 class="font-weight-bold mb-2">
                             <img src="images/icons/dot.radiowaves.left.and.right.svg" height="40">
                         </h3>
-                        <h4 class="font-weight-bold mb-2">Photo Requests</h4>
-                        <p>Get amazing pictures of you taken from unknown others. From their position, they can take the picture of you that you would never have dreamed of!</p>
+                        <h4 class="font-weight-bold mb-2">AirDrop, but for Groups</h4>
+                        <p>Apart from Android support, Echo Photos has many advantages compared to AirDrop. With smart download tools, do never accidentially download your photos again!</p>
                     </div>
                     <div class="mb-40 text-center text-md-left">
                         <h3 class="font-weight-bold mb-2">
@@ -227,55 +227,7 @@
             </div>
         </div>
     </section>
-    
-    <div class="div">
-        <iframe width="100%" height="800"
-            src="https://www.youtube.com/embed/CL4ZEa2aEoo?rel=0&autoplay=1&showinfo=0&controls=0" title="Echo Photos"
-            frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen>
-        </iframe>
-    </div>
 
-    <section id="requests" class="feature-list section">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="heading">
-                        <h2>Photo Echo</h2>
-                        <p>Request and receive a photo of yourself - just like an echo, but as a photo!</p>
-                    </div>
-                </div>
-
-            </div>
-            <div class="row mb-40">
-                <div class="col-md-6 text-center mb-5 mb-lg-0">
-                    <img class="img-fluid" src="images/requestmap.png" alt="">
-                </div>
-                <div class="col-md-6 align-self-center text-center text-md-left">
-                    <div class="content">
-                        <h4 class="subheading">Request a picture</h4>
-                        <p>By sharing your live location, anyone using Echo that is nearby will be able to take the
-                            perfect shot of you. Whether you are hiking in the mountains or sailing on the ocean - get pictures
-                            you would have never gotten without the Echo Photos app!</p>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-6 order-md-1 order-2 align-self-center text-center text-md-left">
-                    <div class="content">
-                        <h4 class="subheading">Respond to a Request</h4>
-                        <p>Easily take pictures of strangers who are nearby. See all requests in Echo Photos, where the AR
-                            camera makes sure that you will get the perfect shot.</p>
-                        <a href="#features" class="btn btn-main btn-main-sm">Check Features</a>
-                    </div>
-                </div>
-                <div class="col-md-6 order-md-2 order-1 text-center mb-5 mb-lg-0">
-                    <img class="img-fluid" src="images/request.png" alt="">
-                </div>
-            </div>
-        </div>
-    </section>
-    
     <section id="clients" class="feature-list section">
         <div class="container">
             <div class="row">
