Rename section as Desktop

--- a/public/index.html
+++ b/public/index.html
@@ -233,7 +233,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="heading">
-                        <h2>Clients</h2>
+                        <h2>Desktop</h2>
                         <p>Use Echo Photos wherever you want! Besides the main iOS and Android apps you can also view your albums on macOS and in the browser!</p>
                     </div>
                 </div>
